updated ARCharacter::UpdateDestinationMarker. Now code compiles and runs.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,7 +131,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/ArchVizAssets/Maps/MainMap
 
 [ModuleFileTracking]
-MyProject4.TimeStamp=2021.12.19-23.01.24
+MyProject4.TimeStamp=2021.12.21-00.03.57
 MyProject4.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.12.10-17.53.18
 PakFile.LastCompileMethod=Unknown
@@ -1028,7 +1028,7 @@ InstalledPlugins=XRVisualization
 
 [RootWindow]
 ScreenPosition=X=1610.000 Y=1100.000
-WindowSize=X=1350.000 Y=790.000
+WindowSize=X=1355.000 Y=795.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1784,6 +1784,7 @@ StaticMeshComponent.Sockets=True
 StaticMeshComponent.ComponentTick=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Events=True
+BP_VRGameMode_C.Cooking=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2008,11 +2009,11 @@ MRUItem1=/Game/Level1
 MRUItem2=/Game/ArchVizAssets/Maps/BlueprintOffice
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_VRCharacter
-MRUItem1=/Game/ArchVizAssets/Maps/MainMap
-MRUItem2=/Game/Level1
-MRUItem3=/Game/ArchVizAssets/Maps/BlueprintOffice
-MRUItem4=/Game/BP_VRGameMode
+MRUItem0=/Game/BP_VRGameMode
+MRUItem1=/Game/BP_VRCharacter
+MRUItem2=/Game/ArchVizAssets/Maps/MainMap
+MRUItem3=/Game/Level1
+MRUItem4=/Game/ArchVizAssets/Maps/BlueprintOffice
 MRUItem5=/Game/VRGameMode
 
 [AssetEditorToolkitTabLocation]
