--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,6 +77,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_A_Click)
 +AxisMappings=(AxisName="Forward",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="Forward",Scale=-1.000000,Key=OculusTouch_Right_Thumbstick_Y)
 +AxisMappings=(AxisName="Right",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Right)
